[package]
name = "meowith-connector"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4.38", features = ["serde"] }
reqwest = { version = "0.12.7", features = ["json", "stream"] }
serde = { version = "1.0.209", features = ["derive"] }
tokio = "1.41.0"
tokio-util = "0.7.12"
uuid = { version = "1.10.0", features = ["v4", "serde"] }
futures-core = "0.3.30"
