[package]
name = "meowith-connector"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4.38", features = ["serde"] }
reqwest = { version = "0.12.7", features = ["json", "stream"] }
serde = { version = "1.0.209", features = ["derive"] }
uuid = { version = "1.10.0", features = ["v4", "serde"] }
urlencoding = "2.1.3"
